--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ form {
   
 }
 #college{
-    width: auto;
+    width: 100%;
     padding: 10px;
     margin: 5px 0 22px 0;
     border-radius: 5px;
