--- a/style.css
+++ b/style.css
@@ -1,48 +1,91 @@
-
-    
-.container{
-    padding: 16px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    
-
-    
-}
- 
-
-input[type=submit] {
-    background-color: blue;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 100%;
-  }
-  input[type=text], input[type=password], input[type=email] {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0 22px 0;
-    border-radius: 5px;
-    border: 1px solid black;
-  }
-
-  * {
+* {
   margin:0;
   padding: 0;
   box-sizing: border-box;
  } 
 body { 
   display:flex;
+  background-color: #f2f2f2;
 }
 form {
   margin:10px auto;
   
 }
-#college{
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0 22px 0;
+
+.container{
+    padding: 16px;
     border-radius: 5px;
-    border: 1px solid black;
+    background-color: #ffff;
 }
 
+ 
+label{
+  width: 95px;
+  height: 24px;
+  font-family: 'Halant';
+  font-style: normal;
+  font-weight: 600;
+  text-align: left;
+  line-height: 24px;
+  color: #000000;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+input[type=submit] {
+    background-color: #155eef;
+    color: #ffff;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    font-family: 'Manrope', sans-serif;
+    cursor: pointer;
+    width: 85%;
+    justify-content: left;
+
+
+  }
+  input[type=text], input[type=password], input[type=email] {
+    padding: 10px;
+    margin: 5px 0 22px 0;
+    width: 400px;
+    height: 56px;
+    border: 1px solid #828282;
+    border-radius: 4px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+  }
+
+  
+#college{
+  padding: 10px;
+  margin: 5px 0 22px 0;
+  width: 400px;
+  height: 56px;
+  border: 1px solid #828282;
+  border-radius: 4px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;;
+}
+.gender{
+display: flex;
+align-items: center;
+padding: 0px;
+gap: 15px;
+width: 200px;
+height: 14;
+font-family: 'Manrope', sans-serif;
+}
+
+
+.skill{
+font-family: 'Manrope', sans-serif;
+gap: 15px;
+display: flex;
+align-items: center;
+padding: 0px;
+width: 200px;
+height: 14;
+}
